--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "astro-blog_roadmap",
   "type": "module",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "scripts": {
     "dev": "astro dev",
     "host": "astro dev --host",
     "start": "astro dev",
     "build": "astro check && astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "test-gen": "playwright codegen http://localhost:4321/",
+    "test": "playwright test --ui"
   },
   "dependencies": {
     "@astrojs/check": "^0.5.10",
