--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
     "Curabitur",
     "Damiano",
     "dignissim",
+    "django",
     "esnext",
     "gifs",
     "gitginore",
@@ -42,6 +43,8 @@
     "Terranova",
     "testear",
     "Traversy",
+    "venv",
+    "virtualenv",
     "xiaomi"
   ]
 }
